--- a/app/views/projects/_field_for_organization.html.erb
+++ b/app/views/projects/_field_for_organization.html.erb
@@ -1,5 +1,7 @@
 <%= f.association :organization,
 	# Org types loaded by AJAX on the project form
 	input_html: {class: "organization-select"},
+	label: false,
+	prompt: "Organization Name",
 	wrapper_html: {class: wrapper_class } 
 %>
