--- a/app/views/projects/_fields_for_contact.html.erb
+++ b/app/views/projects/_fields_for_contact.html.erb
@@ -1,6 +1,6 @@
 <div class='fields row-fluid'>
-	<%= f.input :name, label: "Contact name", wrapper_html: {class: "span4"} %>
-	<%= f.input :position, label: "Contact position", wrapper_html: {class: "span3"} %>
+	<%= f.input :name, label: false, placeholder: "Contact Name", wrapper_html: {class: "span4"} %>
+	<%= f.input :position, label: false, placeholder: "Contact Position", wrapper_html: {class: "span3"} %>
 	<%= render partial: 'field_for_organization', locals: {f: f, wrapper_class: "span4"} %>
-	<%= link_to_remove_fields "<i class='icon-trash'></i>", f %>
+	<%= link_to_remove_fields f %>
 </div>
