--- a/app/views/projects/_fields_for_transaction.html.erb
+++ b/app/views/projects/_fields_for_transaction.html.erb
@@ -1,5 +1,5 @@
 <div class='fields row-fluid'>
-	<%= f.input :value, wrapper_html: { class: "span6"} %>
-	<%= f.association :currency, wrapper_html: { class: "span4"} %>
-	<%= link_to_remove_fields "<i class='icon-trash'></i>", f %>
+	<%= f.input :value, label: false, placeholder: "Value", wrapper_html: { class: "span6"} %>
+	<%= f.association :currency, label: false, prompt: "Currency", wrapper_html: { class: "span4"} %>
+	<%= link_to_remove_fields f %>
 </div>
