makes Resources really bitchin on the project#edit page

--- a/app/views/projects/_project_form.html.haml
+++ b/app/views/projects/_project_form.html.haml
@@ -44,33 +44,7 @@
 				.row-fluid
 					= f.input :description, input_html: {rows: "8"}, wrapper_html: {class: "span12"}
 				.row-fluid
-					#project-form-resources.span12{style: "border:1px solid #124; margin:10px"}
-						
-						.row-fluid{style: "overflow-y: auto;border-bottom:1px solid #124"}
-							%h4.span2
-								Resources:
-							.span10.text-warning{style: "margin-top:10px;"}
-								%strong 
-									Editing a resource will affect other projects which draw from that resource!
-						.row-fluid.project-accessory-fields
-							.well
-								= f.simple_fields_for :resources do |resource_form|
-									= render "resources/fields", f: resource_form
-
-						%script#resource-template{type: 'text/template'}
-							%div{"data-resource-id" => "<%= resource_id %>".html_safe}
-								%p
-									%strong
-										Added:
-									<%= resource %>
-								%span
-									%a{href: "/resources/<%= resource_id %>".html_safe}
-										More about this resource &rarr;
-								<%= unlink_button %>
-						.row-fluid{style: "border-top:1px solid #124; padding:8px"}
-							= render 'resources_for_aiddata'
-							#resources
-								You can link to new resources here, but you'll have to edit the project again to edit a new resource.
+					= render 'project_form_resources', f: f
 
 
 				
