--- a/app/views/projects/_resources_for_aiddata.html.haml
+++ b/app/views/projects/_resources_for_aiddata.html.haml
@@ -61,5 +61,5 @@
     )
 
     $('#add_resource').click add_resource
-    $('.resource').append(unlink_button)
+    $('.resource p:last-child').append(unlink_button)
     $('.unlink-resource').click(unlink_resource)
