--- a/app/views/projects/_project_form_resources.html.haml
+++ b/app/views/projects/_project_form_resources.html.haml
@@ -18,6 +18,7 @@
 			%span.pull-right.text-warning{style: "margin-top:10px;"}
 				%strong
 					Editing a resource may affect other projects!
+		- @project.resources.build if @project.resources.empty? # if you don't do this, new ones will have nowhere to go.
 		= f.simple_fields_for :resources do |resource_form|
 			= render "resources/fields", f: resource_form
 	.row-fluid{style: "margin-bottom: 5px;"}
@@ -39,8 +40,8 @@
 
 			$.post(pinned_resources_path + ".html", {resource_id: resource_id}, (response) ->
 				if response
-					new_form = $(response)
-
+					new_form = $(response).find('.fields')
+					console.log new_form.html()
 					$("#resources_header").next().prepend(new_form.hide())
 					new_form.slideDown()
 
