--- a/app/views/resources/_form_inset.html.haml
+++ b/app/views/resources/_form_inset.html.haml
@@ -1,3 +1,3 @@
-= simple_form_for @project do |f|
-	= f.simple_fields_for(resource) do |builder|
+= form_for @project do |f|
+	= f.simple_fields_for(:resources, resource, child_index: resource.id) do |builder|
 		= render("projects/fields_for_resource", :f => builder)
