--- a/app/views/aiddata_admin_mailer/flag_notification.text.erb
+++ b/app/views/aiddata_admin_mailer/flag_notification.text.erb
@@ -2,7 +2,7 @@ NEW FLAG:
 ============================
 
 "<%= @flag.comment %>"
-was posted by <%= @flag.owner ? @flag.owner.name : "NIL"%> (<%= @flag.owner.email %>) 
+was posted by <%= @flag.owner ? "#{@flag.owner.name} (#{@flag.owner.email})" : "UNKNOWN" %>  
   <%= time_ago_in_words @flag.created_at %> ago.
 
     <%if PROJECT_ACCESSORY_OBJECTS.include?(@flag.flaggable_type)
