moves project page resources js to new file

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -31,8 +31,9 @@
   <h1>Flags:</h1>
   <%= render 'project_flags' %>
 </div>
-<%= javascript_include_tag "underscore/index" %>
 <%= render 'project_flag_form' %>
+
+<%= javascript_include_tag "resources/index" %>
 
 <script>
   $('#approve').click(function () {
