--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -60,7 +60,7 @@
 		$('.active-check').toggleClass('active-project-check').toggleClass('inactive-project-check')
 	})
 
-var flavors= ["neon", "pastel", "plain", "classic", "starry_night"]
+var flavors= ["neon", "pastel", "plain", "classic", "starry_night", "shade", "ROYGBIV"]
 flavors.forEach(function(f) {
 	$('#flavors').append("<a class='btn flavor-button' data-flavor='"+f+"'>"+f+"</a>")
 })
@@ -71,17 +71,28 @@ $('.flavor-button').click(function(){
 
 function colorize(flavor) {
 	var items = [
-		{ selector: "#project-form-wrapper", neon: "#40d040", pastel: "#B9E4B9", classic: "white", starry_night: "#610B0B"},
-		{ selector: "#project-form-content", neon: "#5090a0", pastel: "#EE9EAE", classic: "lightgray", starry_night: "#610B0B"},
-		{ selector: "#project-form-project", neon: "#ee4466" , pastel: "#EE9EAE", classic: "darkgray", starry_night: "#819FF7"},
-		{ selector: "#project-form-flow-class", neon: "#a91", pastel: "#F5F2D9", classic: "steelblue", starry_night: "#B18904"},
-		{ selector: "#project-form-loan-detail", neon: "#1fa", pastel: "#F8E3BE", classic: "darkred", starry_night: "#A4A4A4"},
-		{ selector: "#project-form-sources", neon: "#44eeaa", pastel: "#F8E3BE", classic: "steelblue", starry_night: "white"},
-		{ selector: "#project-form-recipients", neon: "#7c2", pastel: "#83FFC1", classic: "steelblue", starry_night: "#5858FA"},
-		{ selector: "#project-form-transactions", neon: "#dda", pastel: "#F56855", classic:"darkred", starry_night: "#CECEF6"},
-		{ selector: "#project-form-organizations", neon: "#1aa", pastel: "#F56855", classic:"darkred", starry_night: "#F4FA58"},
-		{ selector: "#project-form-contacts", neon: "#375",  pastel: "#F8E3BE", classic: "darkred",  starry_night: "#FACC2E"},
-		{ selector: "#project-form-resources", neon: "#dd5",  pastel: "#F5E355", classic: "steelblue", starry_night: "#5858FA"},
+		{ selector: "#project-form-wrapper", neon: "#40d040", pastel: "#B9E4B9", classic: "white", starry_night: "#610B0B", shade: "white", ROYGBIV: "white"},
+		
+		{ selector: "#project-form-content", neon: "#5090a0", pastel: "#EE9EAE", classic: "lightgray", starry_night: "#610B0B", shade: "#0040FF", ROYGBIV: "#FE2E2E"},
+		
+		{ selector: "#project-form-project", neon: "#ee4466" , pastel: "#EE9EAE", classic: "darkgray", starry_night: "#819FF7", shade: "#E0ECF8", ROYGBIV: "#2EFEF7"},
+		
+		{ selector: "#project-form-flow-class", neon: "#a91", pastel: "#F5F2D9", classic: "steelblue", starry_night: "#B18904", shade: "#2E64FE", ROYGBIV: "#F7FE2E"},
+		
+		{ selector: "#project-form-loan-detail", neon: "#1fa", pastel: "#F8E3BE", classic: "darkred", starry_night: "#A4A4A4", shade: "#2E64FE", ROYGBIV: "#FE9A2E"},
+		
+		{ selector: "#project-form-sources", neon: "#44eeaa", pastel: "#F8E3BE", classic: "steelblue", starry_night: "white", shade: "white", ROYGBIV: "#9AFE2E"},
+		
+		{ selector: "#project-form-recipients", neon: "#7c2", pastel: "#83FFC1", classic: "steelblue", starry_night: 
+		"#5858FA", shade: "#EFF2FB", ROYGBIV: "#2E2EFE"},
+		
+		{ selector: "#project-form-transactions", neon: "#dda", pastel: "#F56855", classic:"darkred", starry_night: "#CECEF6", shade: "#E0E6F8", ROYGBIV: "#2E9AFE"},
+		
+		{ selector: "#project-form-organizations", neon: "#1aa", pastel: "#F56855", classic:"darkred", starry_night: "#F4FA58", shade: "#CED8F6", ROYGBIV: "#2EFE9A"},
+		
+		{ selector: "#project-form-contacts", neon: "#375",  pastel: "#F8E3BE", classic: "darkred",  starry_night: "#FACC2E", shade: "white", ROYGBIV: "#2EFE9A"},
+		
+		{ selector: "#project-form-resources", neon: "#dd5",  pastel: "#F5E355", classic: "steelblue", starry_night: "#5858FA", shade: "#A9BCF5", ROYGBIV: "#9AFE2E"},
 	]
 
 
