--- a/app/views/shared/_recent.haml
+++ b/app/views/shared/_recent.haml
@@ -38,7 +38,7 @@
   function load_recent() {
 
       $.get('/recent', function(data) {
-        data = $.parseJSON(data)
+        // data = $.parseJSON(data)
         $('#recent-changes ul').html("")
         data.forEach(function(d) {
         template_text = $("#recent-item").html()
