--- a/app/views/projects/_project_files.html.erb
+++ b/app/views/projects/_project_files.html.erb
@@ -43,9 +43,15 @@
 
 	</script>
 	<% if current_user %>
-		<%= form_tag "#{project_path @project}/files", :multipart => true do %>
+		<%= form_tag "#{project_path @project}/files", :multipart => true, onsubmit: "return confirm_terms_and_conditions(this)" do %>
 			<%= file_field_tag 'file' %>
 		  	<%= submit_tag 'Add file', class: "btn btn-info" %>
+	        <div class='row-fluid'>
+		        <input style='display:inline;' type='checkbox' required="true" id='terms_and_conditions'/>
+		        <label style='display:inline;'>
+		          I accept the <%= link_to "terms and conditions", "http://www.aiddata.org/content/index/about/terms-conditions" %>.
+		        </label>
+			</div>
 		<% end %>
 	<% else %>
 		<p><i> Please
