--- a/app/views/projects/_project_flag_form.html.haml
+++ b/app/views/projects/_project_flag_form.html.haml
@@ -8,7 +8,7 @@
 				! <%= flag_type_name %>
 				! </span>
 		.modal-body
-			%form{action: "/flags", method: "post"}
+			%form{action: "/flags", method: "post", onsubmit: "return confirm_terms_and_conditions(this)"}
 				%input{name: "definitely_came_from_web_form", type: "hidden", value: "True"}
 				%input{name: "flag[flaggable_id]", type: "hidden", value: "<%= flaggable_id %>".html_safe }
 				%input{name: "flag[flaggable_type]", type: "hidden", value: "<%= flaggable_type %>".html_safe}
@@ -25,6 +25,12 @@
 						
 				%input{name: "flag[source]", placeholder: "Source URL"}
 				%textarea{name: "flag[comment]", placeholder: "Your message... (required)", rows: 2}
-				%input.btn.btn-primary{type: "submit", value: "Submit"}
+				.row-fluid
+					.span6		
+						%input#terms_and_conditions{type: "checkbox", required: true}
+						I accept the 
+						= link_to "terms and conditions", "http://www.aiddata.org/content/index/about/terms-conditions" 
+					.span6
+						%input.btn.btn-primary{type: "submit", value: "Submit"}
 		.modal-footer
 			%button.close{type: "button", "data-dismiss" => "modal"} &times;
