Adds merge to top bar

--- a/app/views/layouts/_project_menu.html.erb
+++ b/app/views/layouts/_project_menu.html.erb
@@ -22,6 +22,8 @@
     <li><%= link_to "Organizations", organizations_path %></li>
     <li><%= link_to "Resources", resources_path %></li>
     <li class="divider"></li>
+    <li><%= link_to "Merge Duplicate Organizations", organizations_prepare_merge_path %></li>
+    <li class="divider"></li>
     <li><b>Codes:</b></li>
     <li><%= link_to "Statuses", statuses_path %></li>
     <li><%= link_to "CRS Sectors", crs_sectors_path %></li>
