org types even when adding a new one

--- a/app/views/projects/_field_for_organization.html.erb
+++ b/app/views/projects/_field_for_organization.html.erb
@@ -1,6 +1,6 @@
 <%= f.association :organization,
 	# Org types loaded by AJAX on the project form
-	input_html: {class: "organization-select"},
+	input_html: {class: "organization-select no-org-types"},
 	label: false,
 	prompt: "Organization Name",
 	wrapper_html: {class: wrapper_class } 
