Fix bug in /dashboard

--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -3,7 +3,9 @@
 
 	<div class='row-fluid'>
 		<span class='alert info span12'>
-			Optimized for Google Chrome.
+			Optimized for Google Chrome. 
+			Showing <strong> Official </strong> projects from the 
+			<%= link_to "1.0 data release", content_by_name_path("downloads") %>.
 		</span>
 	</div>
 
