--- a/app/views/shared/_recent.haml
+++ b/app/views/shared/_recent.haml
@@ -18,6 +18,8 @@
       <%= info.length > 0 ? info + "," : "" %>
     %span<>
       <%= action %>
+    %span<>
+      <%= " " + time + " ago"%>
 
 
 :javascript
@@ -36,8 +38,8 @@
     })
 
   function load_recent() {
-
       $.get('/recent', function(data) {
+        console.log(data)
         // data = $.parseJSON(data)
         $('#recent-changes ul').html("")
         data.forEach(function(d) {
